fixed oversized images creating scroll on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -304,7 +304,7 @@ h1.active, #discover-button.active {
 #gallery ul {
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 5rem;
     list-style: none;
 }
@@ -314,7 +314,7 @@ h1.active, #discover-button.active {
 }
 
 #gallery ul li img {
-    width: 100%;
+    max-width: 100%;
 }
 
 #main-bg {
